<resources>
    <string name="app_name">Album Rater</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add Album</string>
    <string name="title_settings">Settings</string>

    <!-- Strings for various fields of the form for adding an album -->
    <string name="album_name_hint">Album Name</string>
    <string name="album_artist_hint">Artist</string>
    <string name="album_review_submit">Add Album</string>

    <!-- Strings for the various options for sorting albums -->
    <string name="sort_title_asc">Album Title (A to Z)</string>
    <string name="sort_title_desc">Album Title (Z to A)</string>
    <string name="sort_artist_asc">Album Artist (A to Z)</string>
    <string name="sort_artist_desc">Album Artist (Z to A)</string>
    <string name="sort_rating_asc">Album Rating (Low to High)</string>
    <string name="sort_rating_desc">Album Rating (High to Low)</string>
    <string name="sort_date_asc">Review Date (Old to New)</string>
    <string name="sort_date_desc">Review Date (New to Old)</string>

    <string name="search_hint">Enter album name or artist</string>

    <!-- Strings for clearing the database -->
    <string name="btn_clear_database_label">Clear Database</string>
    <string name="dialog_clear_database_title">Confirm Database Clearance</string>
    <string name="dialog_clear_database_msg">Are you sure you want to clear the database (this will delete all entries in the database)?</string>
    <string name="dialog_confirm">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Album info placeholders -->
    <string name="album_title_placeholder">Album Title</string>
    <string name="album_artist_placeholder">Artist</string>
    <string name="album_date_placeholder">XX-XX-XXXX</string>
    <string name="album_review_placeholder">Album Review</string>

    <!-- Labels for the album info view buttons -->
    <string name="btn_delete_album">Delete Album</string>
    <string name="btn_edit_album">Edit Album</string>
    
    <!-- Strings for the dialog confirming if the user wants to delete an album -->
    <string name="dialog_delete_album_title">Confirm Album Deletion</string>
    <string name="dialog_delete_album_message">Are you sure you want to delete this album (this can\'t be undone)?</string>

    <!-- Strings for the edit album fragment -->
    <string name="btn_cancel_edit">Cancel</string>
    <string name="btn_submit_edit">Submit Edit</string>
    
    <!-- Strings for bundle keys related to editing albums -->
    <string name="original_album_title">origAlbumTitle</string>
    <string name="original_album_artist">origAlbumArtist</string>
    <string name="original_album_rating">origAlbumRating</string>
    <string name="original_album_review">origAlbumReview</string>
    <string name="original_album_date">origAlbumDate</string>
    <string name="new_album_title">newAlbumTitle</string>
    <string name="new_album_artist">newAlbumArtist</string>
    <string name="new_album_rating">newAlbumRating</string>
    <string name="new_album_review">newAlbumReview</string>
    <string name="new_album_date">newAlbumDate</string>

    <string name="invalid_album_form_message">Please fill out all the fields and select a rating before submitting</string>
</resources>
